# thmsoc_python

./: .gitignore  LICENSE  README.md  example_thmsoc_python_config.toml  pyproject.toml
src/thmsoc/: __init__.py  arguments.py  daterange.py  gen_l2_batches.py  gen_summary_plot_batches.py  gmag_retrieve_usgs_variometer.py  product_volume.py
src/thmsoc/cli/: gen_l2_batches.py  gen_summary_plot_batches.py  gmag_retrieve_usgs_variometer.py  product_volume.py
