[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "thmsoc-python"
version = "0.1.0"
description = "Python tools for the THEMIS SOC"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pyspedas",
    "tomli"
    "uv",
]

[project.scripts]
product_volume = "thmsoc.cli.product_volume:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]